--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -5,6 +5,7 @@
   <h1>Hello World Component!</h1>
 </div>
 
+<!-- Block Manager -->
 <div style="display: block;">
   <div class="blocks-wrp" #blocksWrapper>
     <mat-accordion *ngIf="editorCustomBlocksCategorys">
@@ -15,10 +16,8 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="blocks">
-          <div *ngFor="let block of editorCustomBlocksCategorys[category]" class="block"
-            matRipple
-            draggable="true" (dragstart)="editorCustomBlocksOnDragStart(block)" (dragstop)="editorCustomBlocksOnDragStop(block)"
-            >
+          <div *ngFor="let block of editorCustomBlocksCategorys[category]" class="block" matRipple draggable="true"
+            (dragstart)="editorCustomBlocksOnDragStart(block)" (dragstop)="editorCustomBlocksOnDragStop(block)">
             <div class="item" *cdkDragPlaceholder>
               <div class="block-media" [innerHTML]="block.getMedia() | sanitize:'html'"></div>
               <div class="block-label">{{block.getLabel()}}</div>
@@ -26,6 +25,55 @@
             <div class="block-media" [innerHTML]="block.getMedia() | sanitize:'html'"></div>
             <div class="block-label">{{block.getLabel()}}</div>
           </div>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+</div>
+
+<!-- Style Manager -->
+<div style="">
+  <div class="style-manager" #styleManagerWrapper>
+    <mat-accordion *ngIf="editorCustomStyleManagerSectors">
+      <mat-expansion-panel *ngFor="let sector of editorCustomStyleManagerSectors">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{sector.getName()}}
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="styles" *ngFor="let prop of sector.getProperties()">
+
+          @switch(prop.getType()){
+          @case('number'){
+          <mat-form-field floatLabel="always" appearance="outline">
+            <mat-label>{{prop.getLabel()}}</mat-label>
+            <input matInput type="number" [placeholder]="this.defValue(prop)" (change)="handleChange($event,prop)">
+            <button mat-icon-button matIconSuffix [attr.aria-label]="'Clear style'" *ngIf="prop.canClear()"
+              (click)="prop.clear()">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+          }
+          @case ('radio'){
+          <label class="example-radio-group-label">{{prop.getLabel()}}</label>
+          <mat-radio-group aria-labelledby="Radio button lists" class="example-radio-group" (change)="handleRadioChange($event,prop)">
+            @for (opt of getRawOptions(prop); track opt.id) {
+              <mat-radio-button class="example-radio-button" [name]="prop.getLabel()" [value]="opt.id">{{getOptionLabel(prop,opt.id)}}</mat-radio-button>
+            }
+          </mat-radio-group>
+          }
+          @default {
+          <mat-form-field floatLabel="always" appearance="outline">
+            <mat-label>{{prop.getLabel()}}</mat-label>
+            <input matInput [placeholder]="this.defValue(prop)" (change)="handleChange($event,prop)">
+            <button mat-icon-button matIconSuffix [attr.aria-label]="'Clear style'" *ngIf="prop.canClear()"
+              (click)="prop.clear()">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+          }
+          }
+
         </div>
       </mat-expansion-panel>
     </mat-accordion>
