--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -52,4 +52,13 @@
 
 .example-radio-button {
   margin: 5px;
+  cursor:pointer;
+  user-select: none;
+}
+
+.label-style-selected{
+  color:#3b97e3;
+}
+.label-style-parent-selected{
+  color:orange;
 }
