--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,107 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  /* GrapesJS */
+  --gjs-main-color: #444;
+  --gjs-primary-color: #444;
+  --gjs-secondary-color: #ddd;
+  --gjs-tertiary-color: #804f7b;
+  --gjs-quaternary-color: #d278c9;
+  --gjs-font-color: #ddd;
+  --gjs-font-color-active: #f8f8f8;
+  --gjs-main-dark-color: rgba(0, 0, 0, 0.2);
+  --gjs-secondary-dark-color: rgba(0, 0, 0, 0.1);
+  --gjs-main-light-color: rgba(255, 255, 255, 0.1);
+  --gjs-secondary-light-color: rgba(255, 255, 255, 0.7);
+  --gjs-soft-light-color: rgba(255, 255, 255, 0.015);
+  --gjs-color-blue: #3b97e3;
+  --gjs-color-red: #dd3636;
+  --gjs-color-yellow: #ffca6f;
+  --gjs-color-green: #62c462;
+  --gjs-left-width: 325px;
+  --gjs-color-highlight: #71b7f1;
+  --gjs-color-warn: #ffca6f;
+  --gjs-handle-margin: -5px;
+  --gjs-light-border: rgba(255, 255, 255, 0.05);
+  --gjs-arrow-color: rgba(255, 255, 255, 0.7);
+  --gjs-dark-text-shadow: rgba(0, 0, 0, 0.2);
+  --gjs-color-input-padding: 22px;
+  --gjs-input-padding: 5px;
+  --gjs-padding-elem-classmanager: 5px 6px;
+  --gjs-upload-padding: 150px 10px;
+  --gjs-animation-duration: 0.2s;
+  --gjs-main-font: Helvetica, sans-serif;
+  --gjs-font-size: 0.75rem;
+  --gjs-placeholder-background-color: var(--gjs-color-green);
+  --gjs-canvas-top: 40px;
+  --gjs-flex-item-gap: 5px;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.styles {
+  margin-bottom: 20px;
+  // width: 325px;
+  .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
+    display: none;
+  }
+}
 
 /* sobrescrever material design */
 /* button background image */
-.button-with-background-image{
-  .mdc-button__label{
+.button-with-background-image {
+  .mdc-button__label {
     display: flex;
     gap: 10px;
     justify-content: center;
     align-items: center;
-    > span{
+    > span {
       display: block;
       width: 15px;
       height: 15px;
       background-size: cover;
+    }
+  }
+}
+
+.mat-mdc-form-field {
+  // width: 100%;
+}
+
+/* Labels */
+.label-style-selected {
+  color: #3b97e3;
+  cursor: pointer;
+  .mat-icon {
+    color: #3b97e3;
+    cursor: pointer;
+  }
+}
+.label-style-parent-selected {
+  color: orange;
+}
+
+.gjs-pn-panels {
+  .gjs-pn-panel {
+    .mat-expansion-panel-body {
+      // width: 325px;
+      // padding: 0 25px;
+    }
+    &.gjs-pn-options {
+      // right: 17.7%;
+    }
+    &.gjs-pn-views-container {
+      mat-form-field{
+        width:100%;
+      }
+    }
+    &.gjs-pn-views {
+      // width: 330px;
     }
   }
 }
